# hector-quadrotor-noetic

./: README.md
hector_gui/src/: ui_hector_quad_follower.py  ui_hector_quad_leader.py
hector_models/: README.md  hector_models.rosinstall
hector_models/hector_components_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_models/hector_components_description/meshes/checkerboard/: checkerboard.dae  checkerboard.stl
hector_models/hector_components_description/meshes/hector_multisensor_head/: multisensor_head.stl  multisensor_head_collision.stl
hector_models/hector_components_description/meshes/vision_box/: hector1_top_box.dae  hector1_top_box.stl  hector1_top_boxTEST_SELF_FILTER.dae  hector2_top_box.dae  hector2_top_box.stl  hector2_top_boxTEST_SELF_FILTER.dae  ps_eye_simple.dae
hector_models/hector_components_description/urdf/: checkerboard.urdf.xacro  hector_multisensor_head.urdf.xacro  spinning_hokuyo_utm30lx.urdf.xacro  spinning_lidar_mount.urdf.xacro  vision_box_common.gazebo.xacro  vision_box_common.urdf.xacro  vision_box_common_dimensions.urdf.xacro  vision_box_dimensions_hector1.urdf.xacro  vision_box_dimensions_hector2.urdf.xacro  vision_box_hector1_addons.urdf.xacro  vision_box_hector2_addons.urdf.xacro
hector_models/hector_models/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_models/hector_sensors_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_models/hector_sensors_description/urdf/: asus_camera.urdf.xacro  flir_a35_camera.urdf.xacro  generic_camera.urdf.xacro  generic_stereo_camera.urdf.xacro  generic_thermal_camera.urdf.xacro  generic_zoom_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect_camera.urdf.xacro  realsense_camera.urdf.xacro  sonar_sensor.urdf.xacro  thermaleye_camera.urdf.xacro
hector_models/hector_xacro_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
hector_models/hector_xacro_tools/urdf/: inertia_tensors.urdf.xacro  joint_macros.urdf.xacro  sensor_macros.urdf.xacro
hector_quadrotor/hector_quadrotor_controller_gazebo/src/: quadrotor_hardware_gazebo.cpp
hector_quadrotor/hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo_no_rviz.launch  put_robot_in_world.launch  start_indoor_world.launch  start_outdoor_world.launch  two_drones_empty.launch
hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_hokuyo_utm30lx.urdf.xacro
hector_quadrotor/hector_quadrotor_gazebo/launch/: camera_launch.launch  quadrotor_empty_world.launch
hector_quadrotor/hector_quadrotor_gazebo_plugins/: CMakeLists.txt
hector_quadrotor/hector_quadrotor_gazebo_plugins/src/: gazebo_ros_baro.cpp  (+3 more)
hector_ui/: CMakeLists.txt  package.xml
hector_ui/src/: ui_hector_quad.py  ui_hector_quad_follower.py  ui_hector_quad_leader.py
takeoff_land/: CMakeLists.txt  package.xml
takeoff_land/launch/: takeoff_land.launch
takeoff_land/src/: takeoff_land_code.py
(+5 files in other folders)
