<package>
  <name>hector_sensors_description</name>
  <version>0.4.2</version>
  <description>hector_sensors_description contains URDF xacro macros for sensors, so they are easily attachable to robot models and usable in gazebo.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_sensors_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
